removed unnecesary code, added unit tests for initialisation DB